# pygraphon

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  build_all_version.yml  docs.yml  tests.yml
dev/: 2022_10_01_test_estimators.ipynb  2022_10_18_test_usvt.ipynb  2022_12_02_test_nethist_python_version.ipynb  profile_fast_greedy_nethist.py  profiling_nethist.py  test_auc.ipynb  test_doc.py  test_permute_matrix.ipynb
docs/: Makefile  requirements.txt
docs/source/: api.rst  cli.rst  conf.py  index.rst  installation.rst  modules.rst  pygraphon.estimators.rst  pygraphon.graphons.rst  pygraphon.matlab_functions.rst  pygraphon.norm.rst  pygraphon.plots.rst  pygraphon.rst  pygraphon.subgraph_isomorphism.rst  pygraphon.utils.rst  refs.bib  tutorials.rst  usage.rst
docs/source/examples/: 01_intro.rst
docs/source/modules/: estimators.rst  generators.rst  graphons.rst  norm.rst  plots.rst  utils.rst
docs/source/modules/pygraphon.estimators/: pygraphon.estimators.HistogramEstimator.rst  pygraphon.estimators.LG.rst  pygraphon.estimators.NBDsmooth.rst  pygraphon.estimators.SAS.rst  pygraphon.estimators.SBA.rst  pygraphon.estimators.SmoothNetHist.rst  pygraphon.estimators.USVT.rst
docs/source/modules/pygraphon.graphons/: pygraphon.graphons.Graphon.rst  pygraphon.graphons.StepGraphon.rst
src/pygraphon/: __init__.py  __main__.py  cli.py  version.py
src/pygraphon/core/: Graphon.py  StepGraphon.py  __init__.py
src/pygraphon/estimators/: BaseEstimator.py  EmpiricalDegrees.py  HistogramEstimator.py  MomentEstimator.py  SAS.py  SmoothNetHist.py  UniversalSingularValueDecomposition.py  __init__.py  completion.py  graphest_fastgreedy.py  nbdsmooth.py  nethist.py  sba.py
src/pygraphon/estimators/completion/: completion.py  optspace.py
src/pygraphon/evaluation/: __init__.py  evaluate.py
src/pygraphon/generators/: BaseGenerator.py  __init__.py
src/pygraphon/graphons/: Graphon.py  GraphonAbstract.py  GraphonFunction.py  StepGraphon.py  __init__.py  common_graphon_functions.py  ssm_generators.py
src/pygraphon/matlab_functions/: __init__.py  cyclecount.m  graphest_fastgreedy.py  nethist.m  nethist.py
src/pygraphon/norm/: AUC_PR.py  BaseMetric.py  MSE_MAE.py  MSE_graphon.py  __init__.py
src/pygraphon/plots/: __init__.py  plot_matrices.py  plots_graphon.py  utils.py
src/pygraphon/subgraph_isomorphism/: CycleCount.py  __init__.py
src/pygraphon/utils/: __init__.py  utils_func.py  utils_graph.py  utils_graphon.py  utils_jit.py  utils_maltab.py  utils_maths.py  utils_matrix.py
tests/: __init__.py  conftest.py  test_graphons.py  test_version.py
tests/test_estimators/: test_api_estimators.py  test_matrix_completion.py  test_smooth_hist.py
tests/test_estimators/test_network_histogram/: test_assignment.py
tests/test_generators/: test_dummy_generator.py
tests/test_graphon/: test_graphon.py  test_graphon_abstract.py  test_ssm_generators.py  test_step_graphon.py
tests/test_norm/: test_metric.py  test_mse.py
tests/test_subgraph_isomorphism/: test_cycle_counts.py
tests/test_utils/: test_graphon_utils.py  test_graphs.py  test_maths.py  test_matrix.py  test_utils_func.py
(+7 files in other folders)
