##########################
# Setup.py Configuration #
##########################
[metadata]
name = pygraphon
version = 0.2.0-dev
description = python library to work with graphon
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com//pygraphon
download_url = https://github.com//pygraphon/releases
project_urls =
    Bug Tracker = https://github.com//pygraphon/issues
    Source Code = https://github.com//pygraphon

# Author information
author = Charles Dufour & Arthur Verdeyme
author_email = charles.dufour@epfl.ch
maintainer = Charles Dufour
maintainer_email = charles.dufour@epfl.ch

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
keywords =
    graphon
    # TODO add your own free-text keywords

[options]
install_requires =
    tqdm
    numpy
    networkx>=3.1
    matplotlib
    scipy
    numba
    scikit-learn
    scikit-image
    loguru
    kneed

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
    pytest-cov
docs =
    sphinx
    furo
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx-automodapi
    sphinx-copybutton
    sphinxcontrib-bibtex
    sphinx-inline-tabs
    sphinx-togglebutton
    # To include LaTeX comments easily in your docs. 
    # texext

[options.entry_points]
console_scripts =
    pygraphon = pygraphon.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = pygraphon
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/pygraphon
    .tox/*/lib/python*/site-packages/pygraphon

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = numpy
